--- a/.github/workflows/selene-lint.yaml
+++ b/.github/workflows/selene-lint.yaml
@@ -1,17 +1,17 @@
 name: Selene Lint
 
 on:
-	pull_request:
-		branches:
-		- master
+  pull_request:
+    branches:
+      master
 
 jobs:
-	build:
-		runs-on: ubuntu-latest
-		strategy:
-			matrix:
-				python-version: [3.8]
-		steps:
+  build:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: [3.8]
+    steps:
     - uses: actions/checkout@v2
     - name: Set up Python ${{matrix.python-version}}
       uses: actions/setup-python@v2
