--- a/.github/workflows/selene-lint.yaml
+++ b/.github/workflows/selene-lint.yaml
@@ -24,4 +24,5 @@ jobs:
     - name: Install Selene
       working-directory: ./ci
       run: |
+        pip install -r requirements.txt
         sudo python ./install_selene.py
