--- a/.github/workflows/selene-lint.yaml
+++ b/.github/workflows/selene-lint.yaml
@@ -19,10 +19,10 @@ jobs:
         python-version: ${{matrix.python-version}}
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
+        python3 -m pip install --upgrade pip
         sudo apt-get install libssl-dev
     - name: Install Selene
       working-directory: ./ci
       run: |
         pip install -r requirements.txt -t .
-        sudo python ./install_selene.py
+        sudo python3 ./install_selene.py
