--- a/.github/workflows/selene-lint.yaml
+++ b/.github/workflows/selene-lint.yaml
@@ -6,7 +6,7 @@ on:
       master
 
 jobs:
-  build:
+  lint:
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -26,6 +26,7 @@ jobs:
       with:
         crate: selene
         version: latest
-    - name: Test Selene
+    - name: Lint
+      working-directory: ./src
       run: |
-        selene --version
+        selene .
