--- a/.github/workflows/selene-lint.yaml
+++ b/.github/workflows/selene-lint.yaml
@@ -14,7 +14,7 @@ jobs:
       uses: actions-rs/install@v0.1
       with:
         crate: selene
-        version: latest
+        version: "0.6.0"
         use-tool-cache: true
     - name: Lint
       working-directory: ./src
